fix animation jump cuts

--- a/index.css
+++ b/index.css
@@ -566,7 +566,7 @@ div.gap {
         background-position: 0 0;
     }
     100% {
-        background-position: 1000px -750px;
+        background-position: 1000px -700px;
     }
 }
 
